[build-system]
requires = ["setuptools >=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nnpiv"
version = "0.0.1"
description = "NESTED NONPARAMETRIC INSTRUMENTAL VARIABLE REGRESSION"
authors = [
    { name = "Isaac Meza", email = "isaacmezalopez@g.harvard.edu" },
    { name = "Rahul Singh", email = "rahul_singh@fas.harvard.edu " }
]
readme = "README.rst"
license = { text = "MIT" }
requires-python = ">=3.6"
dependencies = ["cvxopt>1.2.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]