[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nnpiv"
version = "0.2.0"
description = "NESTED NONPARAMETRIC INSTRUMENTAL VARIABLE REGRESSION"
authors = [
    { name = "Isaac Meza", email = "isaacmezalopez@g.harvard.edu" },
    { name = "Rahul Singh", email = "rahul_singh@fas.harvard.edu " }
]
readme = "README.rst"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["cvxopt>1.2.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nnpiv*"]